--- a/pipfile
+++ b/pipfile
@@ -12,6 +12,9 @@ flask-migrate = "*"
 flask-sqlalchemy = "*"
 flask-mail = "*"
 flask-cors = "*"
+flask-bcrypt = "*"
+flask-jwt-extended = "*"
+python-dotenv = "*"
 
 [requires]
 python_version = "3.8"
